--- a/app/src/main/res/layout-land/activity_main.xml
+++ b/app/src/main/res/layout-land/activity_main.xml
@@ -8,48 +8,40 @@
     tools:context="edu.utep.cs.cs4330.battleship.MainActivity">
 
     <LinearLayout
-        android:orientation="horizontal"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:orientation="vertical">
 
-        <LinearLayout
-            android:orientation="vertical"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content">
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
 
-
-            <Spinner
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:id="@+id/spinner"
-                android:background="@android:drawable/btn_dropdown"
-                android:spinnerMode="dropdown"/>
-
-            <Button
-                android:text="Clear"
+            <TextView
+                android:id="@+id/textView"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-
-                android:id="@+id/clear"
-                android:layout_weight="1" />
+                android:layout_alignParentTop="true"
+                android:layout_centerHorizontal="true"
+                android:layout_marginTop="56dp"
+                android:text="Welcome to the BattleShip game" />
 
             <Button
-                android:text="PLACE SHIPS"
-                android:layout_width="match_parent"
+                android:id="@+id/pvp"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_alignParentBottom="true"
+                android:layout_centerHorizontal="true"
+                android:layout_marginBottom="59dp"
+                android:text="PVP" />
 
-                android:id="@+id/place"
-                android:layout_weight="1" />
+            <Button
+                android:id="@+id/comp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Play Computer"
+                android:layout_centerVertical="true"
+                android:layout_centerHorizontal="true" />
+        </RelativeLayout>
 
-        </LinearLayout>
-
-        <edu.utep.cs.cs4330.battleship.place
-            android:id="@+id/boardView"
-            android:layout_width="350dp"
-            android:layout_height="350dp"
-            android:layout_marginTop="10dp"/>
     </LinearLayout>
-
-
-
 </android.support.design.widget.CoordinatorLayout>
